# task2

./: .flake8  .gitignore  .pre-commit-config.yaml  README.MD  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
migrations/: admins_database.sql
parsers/: out.csv  startupdaily.py  transport_words.txt
src/tgbot/: config.py  main.py
src/tgbot/filters/: role.py
src/tgbot/handlers/: admin.py  common.py  users.py
src/tgbot/middlewares/: role.py
src/tgbot/states/: add_admin.py
src/tgbot/utils/: default_commands.py
