[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "hackabot"
version = "0.0.1"
authors = [
    { name = "kahathoners", email = "email@domain.whatever" },
]
description = "Telegram bot example package"
requires-python = ">=3.10"

dependencies = [
    "aiogram~=2.21",
]
[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "flake8"
]
formatting = [
    "black"
]

[project.scripts]
tgbot = "tgbot.main:cli"